@@ -1,3 +1,8 @@
+2004-01-05  Saito <saito2@digitalme.com>
+
+	* timidity/playmidi.c, timidity/sndfont.c:
+	  Fix around SoundFont.
+
 2004-01-04  Saito <saito2@digitalme.com>
 
 	* timidity/playmidi.[ch], timidity/mix.c, timidity/sndfont.c:
